--- a/cmake/cmake_script/CMakeLists.txt
+++ b/cmake/cmake_script/CMakeLists.txt
@@ -1,8 +1,12 @@
-
 cmake_minimum_required (VERSION 2.6)
 
 project (script)
 
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/CMakeModules)
+message(STATUS "CMAKE_MODULE_PATH : " ${CMAKE_MODULE_PATH})
+
+find_package(cpptests)
+message(STATUS "CPPTESTS : " ${CPPTESTS})
 
 find_path(sub_cmake_directory
     CMakeLists.txt
@@ -16,7 +20,6 @@ foreach(ITEM ${SUB_HAS_CMAKELISTS_TXT_DIRS})
     add_subdirectory(${SUB_DIR})
 endforeach()
 
-message(STATUS "sub_cmake_dirs: " ${sub_cmake_dirs})
 message(STATUS "sub_cmake_directory: " ${sub_cmake_directory})
 message(STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR})
 message(STATUS "CMAKE_CURRENT_BINARY_DIR: " ${CMAKE_CURRENT_BINARY_DIR})
